Fix for bugzilla bug 86330 r=adamock sr=rpotts. Bug with SH in frames with targets